--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,14 @@
 {
-    "compilerOptions": {
-        "noImplicitAny": true,
-        "preserveConstEnums": true,
-        "sourceMap": true,
-        "target": "ES6",
-        "downlevelIteration": true,
-        "lib": [
-            "ES6",
-            "DOM.Iterable"
-        ],
-        "outDir": "dist",
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "moduleResolution": "node"
-    }
+  "compilerOptions": {
+    "noImplicitAny": true,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "target": "ES6",
+    "downlevelIteration": true,
+    "lib": ["ES6", "DOM.Iterable"],
+    "outDir": "dist",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "moduleResolution": "node"
+  }
 }
